Modify Registration Form

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=ERP
 APP_ENV=local
 APP_KEY=base64:uBedoJAcs0k5NyGzfZSRsAw2kdPsNecNYBXIzSM2yyI=
 APP_DEBUG=true
@@ -22,9 +22,9 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=majad.shohagh@gmail.com
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
